k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: school-api
  labels:
    name: school-api
    environment: production
