k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-api
  namespace: school-api
  labels:
    app: school-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: school-api
  template:
    metadata:
      labels:
        app: school-api
    spec:
      securityContext:
        runAsNonRoot: true    # User 1001 is a non-privileged user account and Any files created by the container will be owned by group 1001
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - name: school-api
        image: rivindu02/school-management-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1001
          capabilities: 
            drop:       
            - ALL       #  The container will only have the minimal permissions required to run
        startupProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 12
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "768Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: school-api-service
  namespace: school-api
spec:
  type: NodePort
  selector:
    app: school-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30080
    name: http
